# cpp-scaffold

./: CMakeLists.txt
src/: CMakeLists.txt  main.c
